# integrals

./: Cargo.toml  README.md  rustfmt.toml
src/: io.rs  main.rs  math.rs  tests.rs
