[package]
name = "integrals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
clap = { version = "4.1.11", features = ["derive"] }
meval = "0.2.0"
rayon = "1.7.0"
textplots = "0.8.0"
